# trading-gateway

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  docker-compose.yml  openapi.json  release-please-config.json
.claude/: settings.json
.claude/commands/: check.md
.claude/rules/: adapter-crates.md  exit-management.md  tests.md  websocket.md
.config/: nextest.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  feature_request.yml
.github/pages/: index.html
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  pr-title.yml  release-please.yml  release.yml
crates/alpaca/: Cargo.toml  README.md
crates/alpaca/src/: adapter.rs  capabilities.rs  credentials.rs  lib.rs  types.rs  websocket.rs
crates/alpaca/tests/: account.rs  capabilities.rs  errors.rs  market_data.rs  orders.rs  positions.rs  trades.rs
crates/alpaca/tests/helpers/: mod.rs
crates/binance/: Cargo.toml  README.md
crates/binance/src/: credentials.rs  lib.rs  user_data_stream.rs  websocket.rs  websocket_types.rs
crates/binance/src/coin_futures/: adapter.rs  capabilities.rs  mod.rs  types.rs
crates/binance/src/common/: auth.rs  error.rs  http.rs  mod.rs  types.rs
crates/binance/src/futures/: adapter.rs  capabilities.rs  mod.rs  types.rs
crates/binance/src/margin/: adapter.rs  capabilities.rs  mod.rs  types.rs
crates/binance/src/spot/: adapter.rs  capabilities.rs  mod.rs  types.rs
crates/binance/tests/: coin_account.rs  coin_capabilities.rs  coin_errors.rs  coin_market_data.rs  coin_orders.rs  coin_positions.rs  coin_trades.rs  futures_account.rs  futures_capabilities.rs  futures_errors.rs  futures_market_data.rs  futures_orders.rs  futures_positions.rs  futures_trades.rs  margin_account.rs  margin_capabilities.rs  margin_errors.rs  margin_market_data.rs  margin_orders.rs  margin_positions.rs  margin_trades.rs  spot_account.rs  spot_capabilities.rs  spot_errors.rs  spot_market_data.rs  spot_oco.rs  spot_orders.rs  spot_positions.rs  spot_trades.rs  websocket_messages.rs
crates/binance/tests/helpers/: mod.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: circuit_breaker.rs  config.rs  correlation.rs  error.rs  lib.rs  metrics.rs  shutdown.rs  telemetry.rs  test_helpers.rs
crates/core/src/adapter/: capabilities.rs  mod.rs  registry.rs
crates/core/src/api/: extractors.rs  middleware.rs  mod.rs  models.rs  routes.rs  state.rs
crates/core/src/events/: router.rs
crates/core/src/exit_management/: cancellation.rs  circuit_breaker.rs  coverage.rs  fill_handler.rs  handler.rs  mod.rs  registry.rs  replace.rs  types.rs
crates/core/src/http/: client.rs  mod.rs  retry.rs
crates/core/src/models/: account.rs  bar.rs  bracket.rs  mod.rs  order.rs  platform.rs  position.rs  quote.rs  system.rs  trade.rs
crates/core/src/state/: mod.rs
crates/core/src/subscription/: filter.rs
crates/core/src/trailing_stop/: adapter_executor.rs  executor.rs  handler.rs  mod.rs  price_source.rs  types.rs  ws_price_source.rs
crates/core/src/websocket/: ack.rs  connection.rs  error.rs  messages.rs  mod.rs  provider.rs  reconnection.rs  registry.rs  server.rs  staleness.rs
crates/mock/: Cargo.toml  README.md
crates/mock/src/: adapter.rs  lib.rs  price.rs  websocket.rs
crates/oanda/: Cargo.toml  README.md
crates/oanda/src/: adapter.rs  capabilities.rs  credentials.rs  dedupe.rs  lib.rs  streaming.rs  types.rs
crates/oanda/tests/: account.rs  capabilities.rs  errors.rs  market_data.rs  orders.rs  positions.rs  trades.rs  transaction_stream.rs
crates/oanda/tests/helpers/: mod.rs
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: rest.rs  websocket.rs
crates/saxo/: Cargo.toml  README.md
crates/saxo/src/: adapter.rs  auth.rs  capabilities.rs  credentials.rs  delta.rs  error.rs  http.rs  instruments.rs  lib.rs  streaming.rs  types.rs  websocket.rs
crates/saxo/tests/: account.rs  capabilities.rs  errors.rs  market_data.rs  orders.rs  positions.rs  trades.rs
crates/saxo/tests/helpers/: mod.rs
crates/tektii/: Cargo.toml  README.md
crates/tektii/src/: ack_bridge.rs  adapter.rs  auth.rs  capabilities.rs  conversions.rs  lib.rs  websocket.rs
crates/tektii/tests/: account.rs  capabilities.rs  empty_ack_drop.rs  empty_ack_paces_fifo.rs  engine_ack_full_loop.rs  engine_id_ack_pacing.rs  errors.rs  exit_management.rs  lagging_strategy_fifo_starvation.rs  market_data.rs  orders.rs  positions.rs  registry_forwarding.rs  trades.rs  websocket.rs
crates/tektii/tests/helpers/: mod.rs
crates/test-support/: Cargo.toml  README.md
crates/test-support/src/: harness.rs  lib.rs  mock_adapter.rs  mock_executor.rs  mock_exit_handler.rs  mock_price_source.rs  mock_provider.rs  mock_state.rs  models.rs  websocket.rs  wiremock_helpers.rs
docker/: Dockerfile
docs/: HOW_TO_RUN_WITH_SAXO_BANK.md
examples/: README.md
examples/nodejs/: package-lock.json  package.json  strategy.js
examples/python/: strategy.py
examples/python/ma_crossover/: Dockerfile  pyproject.toml  strategy.py  test_strategy.py
examples/python/rsi_momentum/: Dockerfile  pyproject.toml  strategy.py  test_strategy.py
scripts/: cleanup.sh
smoke-tests/: README.md  smoke.js
src/: main.rs
tests/: adapter_constructor.rs  broker_reconnection.rs  e2e_concurrent_orders.rs  e2e_engine_event_id_echo.rs  e2e_health_observability.rs  e2e_market_data.rs  e2e_order_flow.rs  e2e_smoke.rs  e2e_strategy_reconnection.rs  exit_leg_parent_discovery.rs  exit_leg_position_targeting.rs  exit_registration_submit_path.rs  graceful_shutdown.rs  metrics_endpoint.rs  openapi_freshness.rs  position_exit_modify.rs  reconciliation.rs  strategy_disconnect.rs  subscription_filtering.rs  trailing_stop_adapter_wiring.rs  trailing_stop_execution.rs  trailing_stop_price_source.rs  trailing_stop_tracking.rs
