[package]
name = "tektii-gateway-binance"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Binance broker adapter for Tektii Gateway (Spot, Margin, Futures, Coin-M)"
readme = "README.md"
keywords = ["trading", "gateway", "binance", "broker"]
categories = ["finance"]

[dependencies]
tektii-gateway-core = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tektii-gateway-test-support = { path = "../test-support" }
serde_json = { workspace = true }
rust_decimal_macros = { workspace = true }
