[package]
name = "tektii-gateway-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Core runtime for Tektii Gateway — traits, models, servers, and exit management"
readme = "README.md"
keywords = ["trading", "gateway", "api", "broker"]
categories = ["finance"]

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
dashmap = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
validator = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tokio-util = { workspace = true }
smallvec = { workspace = true }
secrecy = { workspace = true }
subtle = { workspace = true }

[features]
test-utils = []

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tokio = { workspace = true, features = ["test-util"] }
