[package]
name = "tektii-gateway-oanda"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Oanda broker adapter for Tektii Gateway (Practice + Live)"
readme = "README.md"
keywords = ["trading", "gateway", "oanda", "broker"]
categories = ["finance"]

[dependencies]
tektii-gateway-core = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tektii-gateway-test-support = { path = "../test-support" }
serde_json = { workspace = true }
rust_decimal_macros = { workspace = true }
