[package]
name = "tektii-protocol"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Shared wire protocol types for communication between Tektii Gateway and Tektii Engine"
readme = "README.md"
keywords = ["trading", "protocol", "tektii"]
categories = ["finance"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
