[package]
name = "tektii-gateway-tektii"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Tektii platform adapter for Tektii Gateway (backtesting via hosted Tektii engine)"
readme = "README.md"
keywords = ["trading", "gateway", "tektii", "backtesting"]
categories = ["finance"]

[dependencies]
tektii-gateway-core = { workspace = true }
tektii-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tektii-gateway-test-support = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
rust_decimal_macros = { workspace = true }
