[package]
name = "tektii-gateway-test-support"
version.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Shared test infrastructure for Tektii Gateway adapter crates"
readme = "README.md"

[dependencies]
tektii-gateway-core = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tokio-util = { workspace = true }

[lints]
workspace = true
